<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    tools:context="com.example.android.livingfruitswithtabs.MainActivity$PlaceholderFragment"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/order_screen_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:clipToPadding="false"
        android:elevation="@dimen/buttonElevation">


        <TextView
            android:id="@+id/order_cover_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cover_photo_size"
            android:background="@drawable/order_cover"
            android:gravity="center"
            android:text="@string/order_cover_1"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />


        <TextView
            android:id="@+id/sign_in_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_cover_text"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:text="@string/sign_in2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="Size:"
            android:textSize="@dimen/size_quant_text_size"
            app:layout_constraintHorizontal_bias="0.27"
            app:layout_constraintLeft_toLeftOf="@+id/guideline4"
            app:layout_constraintRight_toLeftOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_text" />

        <TextView
            android:id="@+id/quantity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:text="Quantity:"
            android:textSize="@dimen/size_quant_text_size"
            app:layout_constraintLeft_toLeftOf="@+id/guideline5"
            app:layout_constraintRight_toLeftOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <TextView
            android:id="@+id/icon125"
            android:layout_width="84dp"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/icon_125g"
            android:gravity="center"
            android:text="125g"
            android:textColor="@color/colorWhite"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintLeft_toLeftOf="@+id/guideline4"
            app:layout_constraintRight_toLeftOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:text="$4 each"
            app:layout_constraintLeft_toLeftOf="@+id/icon125"
            app:layout_constraintRight_toRightOf="@+id/icon125"
            app:layout_constraintTop_toBottomOf="@+id/icon125" />

        <EditText
            android:id="@+id/editText_125"
            android:layout_width="79dp"
            android:layout_height="55dp"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:text="0"
            android:textColorLink="@android:color/black"
            app:layout_constraintHorizontal_bias="0.551"
            app:layout_constraintLeft_toLeftOf="@+id/guideline5"
            app:layout_constraintRight_toLeftOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/icon125" />

        <TextView
            android:id="@+id/icon_400"
            android:layout_width="95dp"
            android:layout_height="54dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/icon_400g"
            android:gravity="center"
            android:text="400g"
            android:textColor="@color/colorWhite"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintLeft_toLeftOf="@+id/guideline4"
            app:layout_constraintRight_toLeftOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:text="$12 each"
            app:layout_constraintLeft_toLeftOf="@+id/icon_400"
            app:layout_constraintRight_toRightOf="@+id/icon_400"
            app:layout_constraintTop_toBottomOf="@+id/icon_400"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />

        <EditText
            android:id="@+id/edit_text_600"
            android:layout_width="79dp"
            android:layout_height="55dp"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:text="0"
            app:layout_constraintHorizontal_bias="0.437"
            app:layout_constraintLeft_toLeftOf="@+id/guideline5"
            app:layout_constraintRight_toLeftOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/icon_600"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <EditText
            android:id="@+id/edit_text_400"
            android:layout_width="79dp"
            android:layout_height="55dp"
            android:layout_marginLeft="8dp"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:text="0"
            app:layout_constraintHorizontal_bias="0.551"
            app:layout_constraintLeft_toLeftOf="@+id/guideline5"
            app:layout_constraintRight_toLeftOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/icon_400"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:id="@+id/icon_600"
            android:layout_width="112dp"
            android:layout_height="67dp"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/icon_600"
            android:gravity="center"
            android:text="600g"
            android:textColor="@color/colorWhite"
            app:layout_constraintLeft_toLeftOf="@+id/guideline4"
            app:layout_constraintRight_toLeftOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="0dp"
            android:text="$16 each"
            app:layout_constraintLeft_toLeftOf="@+id/icon_600"
            app:layout_constraintRight_toRightOf="@+id/icon_600"
            app:layout_constraintTop_toBottomOf="@+id/icon_600"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <TextView
            android:id="@+id/subtotal_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_marginTop="16dp"
            android:text="Subtotal: "
            app:layout_constraintRight_toLeftOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/subtotal_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/subtotal_text"
            tools:text="$25.00" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.35" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.66" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="265dp"
            android:layout_height="91dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="left"
            app:layout_constraintBottom_toTopOf="@+id/shippingText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group_title"
            app:layout_constraintVertical_chainStyle="packed">

            <RadioButton
                android:id="@+id/pickup_radio_button"
                style="@android:style/Widget.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="FREE -- Pickup at our packhouse"
                android:textSize="@dimen/radio_button_font_size" />

            <RadioButton
                android:id="@+id/free_delivery_radio"
                style="@android:style/Widget.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="FREE -- delivery to Kerikeri CBD"
                android:textSize="@dimen/radio_button_font_size" />

            <RadioButton
                android:id="@+id/standard_delivery_radio"
                style="@android:style/Widget.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Standard delivery, calculate below"
                android:textSize="@dimen/radio_button_font_size" />

        </RadioGroup>

        <TextView
            android:id="@+id/radio_group_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="32dp"
            android:text="Select your delivery method:"
            app:layout_constraintLeft_toLeftOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/subtotal_text" />

        <TextView
            android:id="@+id/shippingText"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="24dp"
            android:text="Shipping Cost:"
            app:layout_constraintBottom_toTopOf="@+id/totalText"
            app:layout_constraintEnd_toStartOf="@+id/shippingPrice"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/shippingPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/radioGroup"
            app:layout_constraintTop_toTopOf="@+id/shippingText"
            tools:text="$10.00" />

        <TextView
            android:id="@+id/totalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/totalText"
            app:layout_constraintEnd_toEndOf="@+id/shippingPrice"
            app:layout_constraintTop_toTopOf="@+id/totalText"
            tools:text="$66.00" />

        <TextView
            android:id="@+id/totalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:includeFontPadding="false"
            android:text="Order Total:"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/continueButton1"
            app:layout_constraintEnd_toStartOf="@+id/totalPrice"
            app:layout_constraintTop_toBottomOf="@+id/shippingText" />

        <Button
            android:id="@+id/continueButton1"
            android:layout_width="wrap_content"
            android:layout_height="83dp"
            android:layout_margin="25dp"
            android:background="@drawable/my_button"
            android:padding="25dp"
            android:text="Order"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/totalText"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="135dp"
            android:layout_height="182dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/continueButton1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/continueButton1"
            app:layout_constraintTop_toBottomOf="@+id/continueButton1"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Space" />

        <RadioGroup
            android:id="@+id/std_delivery_group"
            android:layout_width="207dp"
            android:layout_height="88dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/radioGroup"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup">

            <RadioButton
                android:id="@+id/std_delivery_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_delivery_1"
                android:textSize="@dimen/std_deliver_text_size" />

            <RadioButton
                android:id="@+id/std_delivery_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_delivery_2"
                android:textSize="@dimen/std_deliver_text_size" />

            <RadioButton
                android:id="@+id/std_delivry_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_delivery_3"
                android:textSize="@dimen/std_deliver_text_size" />

            <RadioButton
                android:id="@+id/std_delivry_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_delivery_4"
                android:textSize="@dimen/std_deliver_text_size"
                android:visibility="visible" />
        </RadioGroup>


    </android.support.constraint.ConstraintLayout>

</ScrollView>





